refac: improve fvh query highlight